fixed faq items overflowing

--- a/app.css
+++ b/app.css
@@ -32,12 +32,10 @@ main {
   align-items: center;
   padding: 2em;
   margin: 3em;
+  margin-top: 9em;
   box-shadow: 0 2em 2em hsla(237, 12%, 33%, 0.5);
   max-width: 75%;
   width: 100%;
-
-  position: relative;
-  top: 7em;
   padding-top: 7em;
 }
 
@@ -48,7 +46,7 @@ h1 {
 
 .faq-img {
   position: absolute;
-  top: -7em;
+  top: 2em;
   max-width: 25em;
 }
 
